Fix: cookie setting issue on localhost for cross-origin and migration from room_id to channel_id
