# docs/swagger.yml
@@ -3774,6 +3774,271 @@ paths:
       security:
         - auth:
             - delete.oauth
+  /channels:
+    get:
+      tags:
+        - Channel
+      summary: list Channels
+      description: Retrieve a list of Channels
+      operationId: list-channels-get
+      parameters:
+        - name: search
+          in: query
+          description: Search query string
+          required: false
+          schema:
+            type: string
+            example: ""
+        - name: order_by
+          in: query
+          description: Field to order by
+          required: false
+          schema:
+            type: string
+            example: created_at
+        - name: order
+          in: query
+          description: Order direction
+          required: false
+          schema:
+            type: string
+            enum:
+              - DESC
+              - ASC
+            example: DESC
+        - name: page
+          in: query
+          description: Page number
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: per_page
+          in: query
+          description: Number of results per page
+          required: false
+          schema:
+            type: integer
+            default: 10
+        - name: trash
+          in: query
+          description: Include trashed items
+          required: false
+          schema:
+            type: boolean
+            default: false
+        - name: where_clause
+          in: query
+          description: Additional filtering criteria
+          required: false
+          schema:
+            type: object
+            example: {}
+        - name: select
+          in: query
+          description: Specific fields to select
+          required: false
+          schema:
+            type: string
+            example: ""
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entities retrieved successfully
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Channel"
+                  info:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        example: 100
+                      page:
+                        type: integer
+                        example: 1
+                      per_page:
+                        type: integer
+                        example: 10
+                      trash:
+                        type: boolean
+                        example: false
+                      order_by:
+                        type: string
+                        example: created_at
+                      order:
+                        type: string
+                        example: DESC
+                      search:
+                        type: string
+                        example: ""
+                      where_clause:
+                        type: object
+                        example: {}
+                      select:
+                        type: string
+                        example: ""
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+      security:
+        - auth:
+            - list.channels
+  /channels/create:
+    post:
+      tags:
+        - Channel
+      summary: create a new Channel
+      description: create a new Channel
+      operationId: create-channels-post
+      requestBody:
+        description: create a new Channel
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Channel"
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entity created successfully
+                  data:
+                    $ref: "#/components/schemas/Channel"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+      security:
+        - auth:
+            - create.channels
+  /channels/view/{id}:
+    get:
+      tags:
+        - Channel
+      summary: view details of an existing Channel
+      description: Retrieve details of an existing Channel by ID
+      operationId: view-channels-get
+      parameters:
+        - name: id
+          in: path
+          description: ID of the Channel
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entity retrieved successfully
+                  data:
+                    $ref: "#/components/schemas/Channel"
+        "400":
+          description: Invalid input
+        "404":
+          description: Entity not found
+      security:
+        - auth:
+            - view.channels
+  /channels/update/{id}:
+    put:
+      tags:
+        - Channel
+      summary: update an existing Channel
+      description: update an existing Channel
+      operationId: update-channels-put
+      parameters:
+        - name: id
+          in: path
+          description: id of the Channel
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        description: update an existing Channel. Every key is optional here.
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Channel"
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entity created successfully
+                  data:
+                    $ref: "#/components/schemas/Channel"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+      security:
+        - auth:
+            - update.channels
+  /channels/delete/{id}:
+    delete:
+      tags:
+        - Channel
+      summary: delete an existing Channel
+      description: delete an existing Channel
+      operationId: delete-channels-delete
+      parameters:
+        - name: id
+          in: path
+          description: id of the Channel
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entity deleted successfully
+                  data:
+                    $ref: "#/components/schemas/Channel"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+      security:
+        - auth:
+            - delete.channels
 components:
   schemas:
     Book:
@@ -3992,9 +4257,10 @@ components:
         iv:
           minLength: 3
           type: string
-        room_id:
+        channel_id:
           minLength: 3
           type: string
+          format: uuid
         unread:
           minLength: 3
           type: boolean
@@ -4002,7 +4268,7 @@ components:
       required:
         - message
         - iv
-        - room_id
+        - channel_id
         - unread
     Secret:
       properties:
@@ -4028,6 +4294,28 @@ components:
       type: object
       required:
         - title
+    Channel:
+      properties:
+        name:
+          minLength: 3
+          type: string
+        type:
+          enum:
+            - DIRECT
+            - GROUP
+            - 0
+            - 1
+          type: string
+        participants:
+          items:
+            format: uuid
+            type: string
+          minItems: 1
+          type: array
+      type: object
+      required:
+        - type
+        - participants
   securitySchemes:
     petstore_auth:
       type: oauth2
