# src/entities/channel.ts
@@ -1,13 +1,16 @@
 
 import { Trim } from "class-sanitizer";
 import { Expose } from "class-transformer";
-import { ArrayMinSize, IsArray, IsIn, IsString, IsUUID, MinLength, ValidateIf } from "class-validator-custom-errors";
+import { ArrayMinSize, IsArray, IsEnum, IsIn, IsString, IsUUID, MinLength, ValidateIf } from "class-validator-custom-errors";
 import { Column, Entity } from "typeorm";
 import Searchable from "../decorators/searchable";
 import { PrimaryColumns } from "../lib/primary-columns";
 import { UUID } from "crypto";
 
-export const ChannelTypes = ['direct', 'group'] as const
+export enum ChannelType {
+  DIRECT,
+  GROUP
+}
 
 @Entity({ name: 'channels' })
 /** Channel represents communication channel b/w one or more people. */
@@ -15,7 +18,7 @@ export default class Channel extends PrimaryColumns {
   @Expose()
   @IsString()
   @MinLength(3)
-  @ValidateIf((c) => c.type === ChannelTypes[1])
+  @ValidateIf((c) => c.type === ChannelType.DIRECT)
   @Trim()
   @Searchable()
   @Column()
@@ -24,9 +27,9 @@ export default class Channel extends PrimaryColumns {
 
   @Expose()
   @IsString()
-  @IsIn(ChannelTypes)
-  @Column()
-  type!: typeof ChannelTypes[number]
+  @IsEnum(ChannelType)
+  @Column({ type: 'enum', enum: ChannelType })
+  type!: ChannelType
 
   @Expose()
   @IsUUID('4', { each: true })
